# x-rust

./: 02_functions.rs  03_flow_control.rs  04_ownership.rs  05_structs.rs  06_enums_pattern_matching.rs  07_collections.rs  08_packages_modules.rs  09_error_handling.rs  10_generics.rs  11_traits.rs  12_lifetimes.rs  14_macros.rs  15_unsafe.rs  16_multithreading.rs  17_smart_pointers.rs  Cargo.toml  README.md  test_macro.rs
01-base/: 01_variables.rs  02_functions.rs  07_collections.rs  09_error_handling.rs  10_generics.rs  11_traits.rs  13_async.rs  Cargo.toml
02-web/: .gitignore  Cargo.toml  README.md
02-web/src/: db.rs  handler.rs  main.rs  model.rs  router.rs
03-embassy/: README.md
04-c-language/: 01_basic_syntax.c  02_variables_datatypes.c  03_operators_expressions.c  04_control_flow.c  05_functions.c  06_arrays.c  07_pointers.c  08_structures_unions.c  09_file_handling.c  10_dynamic_memory.c  11_preprocessor.c  12_command_line_args.c  13_error_handling.c  14_standard_library.c  15_makefile_example.c  16_multi_threading.c  17_c_vs_cpp.c  17_comprehensive_example.c  Makefile  README.md  helper.c  helper.h
